Improve README.md

--- a/nginx/chatbot.conf
+++ b/nginx/chatbot.conf
@@ -1,5 +1,5 @@
 server {
-    server_name ai.3steps.cn;
+    server_name ai.example.com;
 
     location / {
         if ($request_method = OPTIONS) {
@@ -37,8 +37,8 @@ server {
 
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/ai.3steps.cn/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/ai.3steps.cn/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/ai.example.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/ai.example.com/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
@@ -47,7 +47,7 @@ server {
 }
 
 server {
-    if ($host = ai.3steps.cn) {
+    if ($host = ai.example.com) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
@@ -60,6 +60,6 @@ server {
     }
 
     listen 80;
-    server_name ai.3steps.cn;
-    return 301 https://ai.3steps.cn;
+    server_name ai.example.com;
+    return 301 https://ai.example.com;
 }
