--- a/requirements.txt
+++ b/requirements.txt
@@ -4,24 +4,34 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 altair==4.2.2
 anyio==3.6.2
+appdirs==1.4.4
 async-timeout==4.0.2
 attrs==23.1.0
+bitsandbytes==0.38.1
 cachetools==5.3.0
+certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
+cmake==3.26.3
 contourpy==1.0.7
 cycler==0.11.0
 dataclasses-json==0.5.7
+distlib==0.3.6
+docker-pycreds==0.4.0
 entrypoints==0.4
 fastapi==0.95.1
 ffmpy==0.3.0
 filelock==3.11.0
 fonttools==4.39.3
 frozenlist==1.3.3
+fschat==0.2.8
 fsspec==2023.4.0
+gitdb==4.0.10
+GitPython==3.1.31
 gptcache==0.1.19
-gradio==3.27.0
+gradio==3.23.0
 gradio_client==0.1.3
+greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.0
 httpx==0.24.0
@@ -31,11 +41,13 @@ Jinja2==3.1.2
 joblib==1.2.0
 jsonschema==4.17.3
 kiwisolver==1.4.4
-langchain==0.0.142
+langchain==0.0.168
 linkify-it-py==2.0.0
+lit==16.0.2
 llama-cpp-python==0.1.38
-llama-index==0.5.23.post1
+llama-index==0.6.6
 markdown-it-py==2.2.0
+markdown2==2.4.8
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
@@ -46,18 +58,35 @@ mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
 networkx==3.1
+nh3==0.2.11
 nltk==3.8.1
 numexpr==2.8.4
 numpy==1.24.2
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 openai==0.27.4
 openapi-schema-pydantic==1.2.4
 orjson==3.8.10
 packaging==23.1
 pandas==2.0.1
+pathtools==0.1.2
 Pillow==9.5.0
+platformdirs==3.5.1
+prompt-toolkit==3.0.38
+protobuf==3.20.0
 psutil==5.9.5
 pydantic==1.10.7
 pydub==0.25.1
+Pygments==2.15.1
 pyparsing==3.0.9
 PyPDF2==3.0.1
 pyrsistent==0.19.3
@@ -67,28 +96,42 @@ pytz==2023.3
 PyYAML==6.0
 regex==2023.3.23
 requests==2.28.2
+rich==13.3.5
 scikit-learn==1.2.2
 scipy==1.10.1
 semantic-version==2.10.0
 sentence-transformers==2.2.2
-sentencepiece
+sentencepiece==0.1.98
+sentry-sdk==1.22.2
+setproctitle==1.3.2
+setuptools-scm==7.1.0
+shortuuid==1.0.11
 six==1.16.0
+smmap==5.0.0
 sniffio==1.3.0
 SQLAlchemy==1.4.47
 starlette==0.26.1
+svgwrite==1.4.3
 sympy==1.11.1
 tenacity==8.2.2
 threadpoolctl==3.1.0
 tiktoken==0.3.3
 tokenizers==0.13.3
 toolz==0.12.0
+torch==2.0.0
+torchvision==0.15.1
 tqdm==4.65.0
 transformers==4.28.1
+triton==2.0.0
 typing-inspect==0.8.0
 typing_extensions==4.5.0
 tzdata==2023.3
 uc-micro-py==1.0.1
 urllib3==1.26.15
 uvicorn==0.21.1
+virtualenv==20.23.0
+wandb==0.15.2
+wavedrom==2.0.3.post3
+wcwidth==0.2.6
 websockets==11.0.2
 yarl==1.9.2
