--- a/systemd/chatbot.service
+++ b/systemd/chatbot.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=root
 WorkingDirectory=/data/chat-publications
-ExecStart=/data/miniconda3/envs/llama-index/bin/python3 chatbot_vicuna.py query -d docs/my-project -l custom-http
+ExecStart=/data/miniconda3/envs/llama-index/bin/python3 chatbot_vicuna.py query -d data/my-project -l custom-http
 Restart=on-failure
 RestartSec=5s
 
