Add rwkv model.

--- a/systemd/rwkv/rwkv-webserver.service
+++ b/systemd/rwkv/rwkv-webserver.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Vicuna Worker Service
-Requires=vicuna-controller.service
+Description=RWKV Web Service
+Requires=rwkv-worker.service
 
 [Service]
 Type=simple
 User=root
 Environment="PATH=/data/miniconda3/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-ExecStart=/data/miniconda3/envs/llama-index/bin/python3 -m fastchat.serve.model_worker --model-path /data/chat-publications/models/vicuna-13b
+ExecStart=/data/miniconda3/envs/llama-index/bin/python3 -m fastchat.serve.gradio_web_server
 Restart=on-failure
 RestartSec=5s
 
