--- a/requirements.txt
+++ b/requirements.txt
@@ -82,7 +82,7 @@ pathtools==0.1.2
 Pillow==9.5.0
 platformdirs==3.5.1
 prompt-toolkit==3.0.38
-protobuf==3.20.0
+# protobuf==3.20.0
 psutil==5.9.5
 pydantic==1.10.7
 pydub==0.25.1
